# example-workflow-artifacts

./: Cargo.toml  README.md  test.sh
.github/workflows/: build.yml  download-and-run.yml
ci_utils/: Cargo.toml  README.md
ci_utils/src/: lib.rs
src/: main.rs
