[package]
name = "ci_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
chrono = "0.4.23"
env_logger = "0.10"
log = { version = "0.4.17", features = ["kv_unstable", "kv_unstable_serde"] }
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.23.0", features = ["full"] }

[[bin]]
name = "get_latest_workflow_run"
path = "bin/get_latest_workflow_run.rs"